# eltra-sdk

./: .gitignore  .gitmodules  EltraConnector.sln  EltraMaster.sln  EltraSdk.sln  LICENSE  README.md  eltra - epos4.sln  eltra - navigo.sln  eltra - photo.sln  eltra - thermo.sln  eltra.sln  nuget.txt  nugetpush.cmd  pull.sh
.github/workflows/: dotnet-core-3_1.yml  dotnet-core-6.yml  dotnet-core-8.yml  dotnet-core.yml
cloud/: EltraCloud.sln  build.sh  publish.sh  pull.bat  pull.sh
cloud/EltraCloud/: EltraCloud.csproj  EltraCloud.sh  EltraCloud.xml  Program.cs  Startup.cs  appsettings.json  libman.json  prebuild.sh  publish.sh
cloud/EltraCloudStorage/: Annotations.cs  EltraCloudStorage.csproj  EltraCloudStorage.sln
connect/EltraConnector/: EltraConnector.csproj  EltraConnector.sln  EltraConnector.xml  nuget.txt
master/: EposMaster.sln  PhotoMaster.sln  ThermoMaster.sln  Thermometer.sln  readme.md
master/EltraMaster/: EltraMaster.csproj  EltraMaster.sln  Master.cs  nuget.txt
master/EposMaster/: EposMaster.cs  EposMaster.csproj
master/EposMasterConsole/: EposMasterConsole.csproj  Program.cs  appsettings.json
master/PhotoMaster/: PhotoMaster.csproj
master/PhotoMasterConsole/: PHOTO_0110h_0A00h_0002h_0001h.xdd  PhotoMasterConsole.csproj  PhotoMasterConsole.sln  Program.cs  appsettings.json  publish.bat
master/ThermoMaster/: Master.cs  ThermoMaster.cs  ThermoMaster.csproj  Thermometer.csproj
master/ThermoMasterConsole/: Options.cs  Program.cs  THERMO_0150h_0B10h_0001h_0006h.xdd  ThermoMasterConsole.csproj  ThermoMasterConsole.sln  ThermometerConsole.csproj  appsettings.json  publish.sh
master/Thermometer/: Authentication.cs  Master.cs  (+2 more)
master/xternals/SensorLibs/Dht22/: CMakeLists.txt  dht22.cpp  dht22.h  sys_helper.cpp
master/xternals/SensorLibs/FsWebCam/: CMakeLists.txt  common.h  fs_web_cam.cpp  fs_web_cam.h
master/xternals/SensorLibs/FsWebCam/test/: CMakeLists.txt  fswebcamtest.cpp
master/xternals/SensorLibs/Sds011/: CMakeLists.txt  common.h  sds.cpp  sds.h
master/xternals/SensorLibs/Sds011/sds/: readme.txt  sds011_lib.cpp  sds011_lib.h  sds_def.h  sds_helper.cpp  sds_helper.h  sds_response.h  sds_state.h  serial.cpp  serial.h  settings.h
navigo/: EltraNavigo.sln  pull.bat  pull.sh
navigo-enka/: EltraNavigoEnka.sln  EltraNotKauf.Android.sln  EltraNotKauf.UWP.sln  EltraNotKauf.iOS.sln  EltraNotKauf.sln
samples/: Dummy.md  readme.md
(+3676 files in other folders)
